// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redirect Component should handle a forced redirect: forced route 1`] = `
<Fragment>
  Redirected towards 
  /dolor
</Fragment>
`;

exports[`Redirect Component should handle a forced redirect: forced route, replace 1`] = `
[
  [
    "/subscriptions/dolor?dolor=sit",
  ],
]
`;

exports[`Redirect Component should handle a redirect with a url: redirect url 1`] = `
<Fragment>
  Redirected towards 
  //lorem/ipsum?dolor=sit
</Fragment>
`;

exports[`Redirect Component should handle existing routes: existing route 1`] = `
{
  "activateOnError": false,
  "aliases": [],
  "component": "productView/productView",
  "default": false,
  "disabled": false,
  "id": "openshift-container",
  "isSearchable": true,
  "path": "*",
  "pathParameter": "OpenShift Container Platform",
  "productConfig": [
    {
      "graphTallyQuery": {
        "granularity": "Daily",
      },
      "initialGraphFilters": [
        {
          "color": "#06c",
          "fill": "#8bc1f7",
          "isOptional": true,
          "metric": "Cores",
          "stroke": "#06c",
        },
        {
          "color": "#06c",
          "fill": "#8bc1f7",
          "isOptional": true,
          "metric": "Sockets",
          "stroke": "#06c",
        },
        {
          "chartType": "threshold",
          "isOptional": true,
          "metric": "Sockets",
        },
        {
          "chartType": "threshold",
          "isOptional": true,
          "metric": "Cores",
        },
      ],
      "initialGraphSettings": {
        "isCardTitleDescription": true,
      },
      "initialGuestsFilters": [
        {
          "cell": [Function],
          "header": [Function],
          "id": "displayName",
        },
        {
          "cellWidth": 40,
          "id": "inventoryId",
        },
        {
          "cell": [Function],
          "cellWidth": 15,
          "id": "lastSeen",
        },
      ],
      "initialInventoryFilters": [
        {
          "cell": [Function],
          "id": "display_name",
          "isSortable": true,
        },
        {
          "cellWidth": 15,
          "id": "sockets",
          "isOptional": true,
          "isSortable": true,
          "isWrappable": true,
        },
        {
          "cellWidth": 15,
          "id": "cores",
          "isOptional": true,
          "isSortable": true,
          "isWrappable": true,
        },
        {
          "cell": [Function],
          "cellWidth": 20,
          "id": "last_seen",
          "isSortable": true,
          "isWrappable": true,
        },
      ],
      "initialInventorySettings": {},
      "initialOption": "cores",
      "initialSecondaryToolbarFilters": [
        {
          "id": "uom",
        },
        {
          "id": "granularity",
        },
      ],
      "initialSubscriptionsInventoryFilters": [
        {
          "id": "product_name",
          "isSortable": true,
          "isWrappable": true,
        },
        {
          "cellWidth": 15,
          "id": "service_level",
          "isSortable": true,
          "isWrappable": true,
        },
        {
          "cellWidth": 20,
          "id": "quantity",
          "isSortable": true,
          "isWrappable": true,
        },
        {
          "cell": [Function],
          "cellWidth": 15,
          "header": [Function],
          "id": "total_capacity",
          "isSortable": true,
          "isWrappable": true,
        },
        {
          "cell": [Function],
          "cellWidth": 15,
          "id": "next_event_date",
          "isSortable": true,
          "isWrappable": true,
        },
      ],
      "initialToolbarFilters": [
        {
          "id": "sla",
        },
      ],
      "inventoryHostsQuery": {
        "dir": "desc",
        "limit": 100,
        "offset": 0,
        "sort": "last_seen",
      },
      "inventorySubscriptionsQuery": {
        "dir": "desc",
        "limit": 100,
        "offset": 0,
        "sort": "next_event_date",
      },
      "productContextFilterUom": true,
      "productDisplay": "partial",
      "productGroup": "OpenShift Container Platform",
      "productId": "OpenShift Container Platform",
      "productLabel": "OpenShift Container Platform",
      "query": {
        "beginning": "2019-06-20T00:00:00.000Z",
        "ending": "2019-07-20T23:59:59.999Z",
        "uom": "cores",
      },
      "viewId": "viewOpenShift Container Platform",
    },
    {
      "graphTallyQuery": {
        "granularity": "Daily",
      },
      "initialGraphFilters": [
        {
          "color": "#06c",
          "fill": "#8bc1f7",
          "metric": "Cores",
          "stroke": "#06c",
        },
      ],
      "initialGraphSettings": {
        "actionDisplay": [Function],
        "isCardTitleDescription": true,
      },
      "initialInventoryFilters": [
        {
          "cell": [Function],
          "id": "display_name",
          "isSortable": true,
        },
        {
          "cell": [Function],
          "cellWidth": 20,
          "id": "core_hours",
          "isSortable": true,
          "isWrappable": true,
        },
        {
          "cell": [Function],
          "cellWidth": 20,
          "id": "last_seen",
          "isSortable": true,
          "isWrappable": true,
        },
      ],
      "initialSecondaryToolbarFilters": [
        {
          "id": "rangedMonthly",
        },
      ],
      "initialToolbarFilters": undefined,
      "inventoryHostsQuery": {
        "dir": "desc",
        "limit": 100,
        "offset": 0,
        "sort": "last_seen",
      },
      "productDisplay": "partial",
      "productGroup": "OpenShift-metrics",
      "productId": "OpenShift-metrics",
      "productLabel": "OpenShift-metrics",
      "query": {
        "beginning": "2019-07-01T00:00:00.000Z",
        "ending": "2019-07-31T23:59:59.999Z",
      },
      "viewId": "viewOpenShift-metrics",
    },
  ],
  "productParameter": "OpenShift Container Platform",
  "redirect": null,
  "routeHref": "/openshift-container",
  "viewParameter": "viewOpenShift Container Platform",
}
`;

exports[`Redirect Component should handle missing routes: missing route, component 1`] = `
<Fragment>
  Redirected towards 
  /lorem-ipsum
</Fragment>
`;

exports[`Redirect Component should render a basic component: basic 1`] = `
<Router
  routes={
    [
      {
        "activateOnError": false,
        "aliases": [],
        "component": "productView/productView",
        "default": false,
        "disabled": false,
        "id": "openshift-dedicated",
        "isSearchable": true,
        "path": "*",
        "pathParameter": "OpenShift-dedicated-metrics",
        "productConfig": [
          {
            "graphTallyQuery": {
              "granularity": "Daily",
            },
            "initialGraphFilters": [
              {
                "chartType": "line",
                "color": "#06c",
                "fill": "#8bc1f7",
                "isStacked": false,
                "metric": "Cores",
                "stroke": "#06c",
                "yAxisUseDataSet": true,
              },
              {
                "chartType": "line",
                "color": "#009596",
                "fill": "#a2d9d9",
                "isStacked": false,
                "metric": "Instance-hours",
                "stroke": "#009596",
                "yAxisUseDataSet": true,
              },
            ],
            "initialGraphSettings": {
              "actionDisplay": [Function],
              "isCardTitleDescription": true,
            },
            "initialInventoryFilters": [
              {
                "cell": [Function],
                "id": "display_name",
                "isSortable": true,
              },
              {
                "cell": [Function],
                "cellWidth": 15,
                "id": "core_hours",
                "isSortable": true,
                "isWrappable": true,
              },
              {
                "cell": [Function],
                "cellWidth": 15,
                "id": "instance_hours",
                "isSortable": true,
                "isWrappable": true,
              },
              {
                "cell": [Function],
                "cellWidth": 15,
                "id": "last_seen",
                "isSortable": true,
                "isWrappable": true,
              },
            ],
            "initialSecondaryToolbarFilters": [
              {
                "id": "rangedMonthly",
              },
            ],
            "initialToolbarFilters": undefined,
            "inventoryHostsQuery": {
              "dir": "desc",
              "limit": 100,
              "offset": 0,
              "sort": "last_seen",
            },
            "productDisplay": "dual-axes",
            "productGroup": "OpenShift-dedicated-metrics",
            "productId": "OpenShift-dedicated-metrics",
            "productLabel": "OpenShift-dedicated-metrics",
            "query": {
              "beginning": "2019-07-01T00:00:00.000Z",
              "ending": "2019-07-31T23:59:59.999Z",
            },
            "viewId": "viewOpenShift-dedicated-metrics",
          },
        ],
        "productParameter": "OpenShift-dedicated-metrics",
        "redirect": null,
        "routeHref": "/openshift-dedicated",
        "viewParameter": "viewOpenShift-dedicated-metrics",
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "rhel",
        "path": "/rhel",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "rhel-arm",
        "path": "/rhel-arm",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "rhel-ibmpower",
        "path": "/rhel-ibmpower",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "rhel-ibmz",
        "path": "/rhel-ibmz",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "rhel-x86",
        "path": "/rhel-x86",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "openshift-container",
        "path": "/openshift-container",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "openshift-dedicated",
        "path": "/openshift-dedicated",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "rhacs",
        "path": "/rhacs",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "rhods",
        "path": "/rhods",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "rhosak",
        "path": "/streams",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "satellite",
        "path": "/satellite",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "satellite-capsule",
        "path": "/satellite-capsule",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productView",
        "disabled": false,
        "exact": true,
        "id": "satellite-server",
        "path": "/satellite-server",
        "redirect": null,
      },
      {
        "activateOnError": true,
        "component": "optinView/optinView",
        "disabled": false,
        "exact": true,
        "id": "optin",
        "path": "/optin",
        "redirect": null,
      },
      {
        "activateOnError": false,
        "component": "productView/productViewMissing",
        "disabled": false,
        "exact": true,
        "id": "missing",
        "path": "/",
        "redirect": "/",
      },
    ]
  }
/>
`;
